external-crates/move/crates/move-compiler/tests/move_check/expansion/standalone_fields.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03009]: unbound variable
  ┌─ tests/move_check/expansion/standalone_fields.move:3:10
  │
3 │         {f: 1, g: 0};
  │          ^ Unbound variable 'f'

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/standalone_fields.move:3:11
  │
3 │         {f: 1, g: 0};
  │           ^
  │           │
  │           Unexpected ':'
  │           Expected ';'
