external-crates/move/crates/move-compiler/tests/move_check/expansion/standalone_fields.move
module 0x42::M {
    fun foo() {
        {f: 1, g: 0};
    }
}
